--- a/.gitignore
+++ b/.gitignore
@@ -160,9 +160,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-*.png
+# *.png
 *.filenames
 *.npy
-*.txt
+# *.txt
 zero123_og_repo/*
 *.ckpt
