--- a/zero123/configs/sd-objaverse-finetune-c_concat-256.yaml
+++ b/zero123/configs/sd-objaverse-finetune-c_concat-256.yaml
@@ -1,6 +1,6 @@
 model:
-  # base_learning_rate: 1.0e-04
-  base_learning_rate: 3.0e-04
+  base_learning_rate: 1.0e-04
+  # base_learning_rate: 3.0e-04
   target: ldm.models.diffusion.ddpm.LatentDiffusion
   params:
     linear_start: 0.00085
@@ -94,13 +94,13 @@ lightning:
   metrics_over_trainsteps_checkpoint: True
   modelcheckpoint:
     params:
-      every_n_train_steps: 5000
+      every_n_train_steps: 2000 # 350 * 2000/60 / 5 [epoch * (data_size/batch_size) / nr_of_checkpoints_we_want]
   callbacks:
     image_logger:
       target: main.ImageLogger
       params:
-        batch_frequency: 500
-        # batch_frequency: 100
+        # batch_frequency: 500
+        # batch_frequency: 50
         # batch_frequency: 1
         max_images: 32
         increase_log_steps: False
@@ -118,4 +118,4 @@ lightning:
     benchmark: True
     val_check_interval: 5000000 # really sorry
     num_sanity_val_steps: 0
-    accumulate_grad_batches: 3
+    accumulate_grad_batches: 10
